# fan-control

./: Dockerfile  README.md  compose.yaml
.github/workflows/: demo.yml  docker.yml
client/: index.html  jsconfig.json  package-lock.json  package.json  postcss.config.js  vite.config.js
client/src/: App.jsx  FanControl.jsx  Slider.jsx  Slider.module.css  SliderVertical.jsx  SliderVertical.module.css  index.css
reverse-proxy/: Cargo.toml
reverse-proxy/src/: main.rs
server/: Cargo.toml
server/src/: fan.rs  main.rs  registers.rs
