[package]
name = "reverse-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
hyper = { version = "1", features = ["full"] }
hyper-util = "0.1"
tokio = { version = "1.36", features = ["full"] }
tower = { version = "0.4", features = ["make"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
